crates/telemetry_events_macros_impl/tests/snapshots/derive__error_union_not_supported.snap
---
source: crates/telemetry_events_macros_impl/tests/derive.rs
expression: expand(input)
---
::core::compile_error! {
    "#[derive(Event)] does not support unions"
}
