crates/telemetry_events_macros_impl/tests/snapshots/derive__into_vs_redacted.snap
---
source: crates/telemetry_events_macros_impl/tests/derive.rs
expression: expand(input)
---
impl ::telemetry_events::Event for TypeTest {
    const DESCRIPTION: ::telemetry_events::EventDescription = ::telemetry_events::EventDescription {
        name: "type_test",
        id: 4u64,
        fields: &[
            ::telemetry_events::FieldDescription {
                name: "a",
                index: 0u64,
            },
            ::telemetry_events::FieldDescription {
                name: "b",
                index: 1u64,
            },
            ::telemetry_events::FieldDescription {
                name: "c",
                index: 2u64,
            },
            ::telemetry_events::FieldDescription {
                name: "d",
                index: 3u64,
            },
        ],
    };
    fn default_instructions() -> ::telemetry_events::ProcessingInstructions<Self> {
        ::telemetry_events::ProcessingInstructions {
            generic_instructions: ::telemetry_events::GenericProcessingInstructions {
                log_instructions: vec![
                    ::telemetry_events::LogProcessingInstructions { logger_name :
                    "type_test", included_fields : vec![Self::DESCRIPTION.fields[0usize],
                    Self::DESCRIPTION.fields[1usize], Self::DESCRIPTION.fields[2usize],
                    Self::DESCRIPTION.fields[3usize]], message_template :
                    "Types: {a} {b} {c} {d}", }
                ],
                metric_instructiosns: vec![],
            },
            additional_processing: None,
        }
    }
    fn value(
        &self,
        field: &::telemetry_events::FieldDescription,
        redactor: &::data_privacy::RedactionEngine,
    ) -> ::telemetry_events::TelemetrySafeValue {
        match field.index {
            0u64 => self.a.into(),
            1u64 => self.b.into(),
            2u64 => self.c.into(),
            3u64 => {
                ::telemetry_events::TelemetrySafeValue::from_redacted(&self.d, redactor)
            }
            _ => panic!("Unknown field index"),
        }
    }
}
