crates/telemetry_events_macros_impl/tests/snapshots/derive__metrics.snap
---
source: crates/telemetry_events_macros_impl/tests/derive.rs
expression: expand(input)
---
impl ::telemetry_events::Event for MetricEvent {
    const DESCRIPTION: ::telemetry_events::EventDescription = ::telemetry_events::EventDescription {
        name: "metric_event",
        id: 3u64,
        fields: &[
            ::telemetry_events::FieldDescription {
                name: "kind",
                index: 0u64,
            },
            ::telemetry_events::FieldDescription {
                name: "latency",
                index: 1u64,
            },
        ],
    };
    fn default_instructions() -> ::telemetry_events::ProcessingInstructions<Self> {
        ::telemetry_events::ProcessingInstructions {
            generic_instructions: ::telemetry_events::GenericProcessingInstructions {
                log_instructions: vec![
                    ::telemetry_events::LogProcessingInstructions { logger_name :
                    "metric_event", included_fields : vec![Self::DESCRIPTION
                    .fields[0usize], Self::DESCRIPTION.fields[1usize]], message_template
                    : "Metric event: {kind} {latency}", }
                ],
                metric_instructiosns: vec![
                    ::telemetry_events::MetricProcessingInstructions { meter_name :
                    "metric_event", instrument_name : "request_latency",
                    included_dimensions : vec![Self::DESCRIPTION.fields[0usize]],
                    metric_field : Self::DESCRIPTION.fields[1usize], instrument_kind :
                    InstrumentKind::Histogram, }
                ],
            },
            additional_processing: None,
        }
    }
    fn value(
        &self,
        field: &::telemetry_events::FieldDescription,
        redactor: &::data_privacy::RedactionEngine,
    ) -> ::telemetry_events::TelemetrySafeValue {
        match field.index {
            0u64 => {
                ::telemetry_events::TelemetrySafeValue::from_redacted(
                    &self.kind,
                    redactor,
                )
            }
            1u64 => self.latency.into(),
            _ => panic!("Unknown field index"),
        }
    }
}
